; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/apitests/win32nt/ntuser/extr_NtUserCallOneParam.c_Test_OneParamRoutine_BeginDeferWindowPos.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/apitests/win32nt/ntuser/extr_NtUserCallOneParam.c_Test_OneParamRoutine_BeginDeferWindowPos.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @Test_OneParamRoutine_BeginDeferWindowPos() #0 {
  %1 = alloca i64, align 8
  %2 = call i64 @NtUserCallOneParam(i32 5, i32 30)
  store i64 %2, i64* %1, align 8
  %3 = load i64, i64* %1, align 8
  %4 = icmp ne i64 %3, 0
  %5 = zext i1 %4 to i32
  %6 = call i32 @TEST(i32 %5)
  %7 = load i64, i64* %1, align 8
  %8 = call i64 @EndDeferWindowPos(i64 %7)
  %9 = icmp ne i64 %8, 0
  %10 = zext i1 %9 to i32
  %11 = call i32 @TEST(i32 %10)
  ret void
}

declare dso_local i64 @NtUserCallOneParam(i32, i32) #1

declare dso_local i32 @TEST(i32) #1

declare dso_local i64 @EndDeferWindowPos(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
